# rtop-rs

./: Cargo.toml  Makefile.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  nvml.rs  psutils.rs  ui.rs
src/widgets/: barchart.rs
src/widgets/barchart/: bar.rs  bar_group.rs
