[package]
name = "rtop-rust"
version = "0.1.0"
authors = ["VisualDust <gavin@gong.host>", "PuQing <me@puqing.work>"]
keywords = ["rust", "top", "system", "monitor"]
repository = "https://github.com/550W-HOST/rtop-rs"
readme = "README.md"
description = "A system monitor written in Rust"
license = "MIT"
exclude = [".github", "Makefile.toml"]
autoexamples = true
edition = "2021"

[dependencies]
crossterm = "0.27.0"
itertools = "0.12.0"
ratatui = "0.24.0"
unicode-width = "0.1.11"
heim = { git = "https://github.com/rtop-rs/heim.git", branch = "master", features = [
    "full",
] }
tokio = { version = "1.35.1", features = ["full"] }
